--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -26,19 +26,24 @@
 
     <property name="output.dir" value="target/capedwarf-release"/>
 
-    <target name="noop"/>
-
     <target name="base" depends="clean-target, copy-files"/>
 
     <target name="copy-files">
         <copy todir="${output.dir}">
             <fileset dir="src/main/resources">
                 <include name="standalone/configuration/**.xml"/>
+                <include name="bin/**.sh"/>
+                <include name="bin/**.bat"/>
+                <include name="bin/**.conf"/>
             </fileset>
         </copy>
+        <chmod file="${output.dir}/bin/capedwarf-bytecode.sh" perm="755"/>
+        <chmod file="${output.dir}/bin/capedwarf.sh" perm="755"/>
     </target>
 
-    <target name="modules" >
+    <target name="modules">
+
+        <module-def name="org.jboss.as.product" slot="capedwarf"/>
 
         <module-def name="com.google.appengine">
             <maven-resource group="com.google.appengine" artifact="appengine-api-1.0-sdk" />
@@ -213,12 +218,14 @@
     <target name="all" depends="base, modules, as-integrate"/>
 
     <target name="as-integrate" depends="modules" description="Integrate capedwarf into existing AS7 instalation">
-       <echo message="jboss dir is: ${jboss.dir}" />
-       <fail unless="jboss.dir" description="Jboss AS7 must be defined" message="property jboss.dir must be set" />
+        <echo message="jboss dir is: ${jboss.dir}"/>
+        <fail unless="jboss.dir" description="Jboss AS7 must be defined" message="property jboss.dir must be set"/>
 
         <copy todir="${jboss.dir}" verbose="true">
-            <fileset dir="${output.dir}" />
+            <fileset dir="${output.dir}"/>
         </copy>
 
+        <chmod file="${jboss.dir}/bin/capedwarf-bytecode.sh" perm="755"/>
+        <chmod file="${jboss.dir}/bin/capedwarf.sh" perm="755"/>
     </target>
 </project>
