--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,12 @@
                 <type>pom</type>
             </dependency>
 
+            <dependency>
+                <groupId>org.jboss.capedwarf.testsuite</groupId>
+                <artifactId>arquillian</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!-- CapeDwarf -->
 
             <dependency>
@@ -1229,6 +1235,7 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
+                <module>arquillian</module>
                 <module>embedded</module>
                 <module>tests</module>
                 <module>tools</module>
@@ -1243,6 +1250,7 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
+                <module>arquillian</module>
                 <module>embedded</module>
                 <module>tests</module>
                 <module>tools</module>
@@ -1254,6 +1262,7 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
+                <module>arquillian</module>
                 <module>tools</module>
             </modules>
         </profile>
@@ -1262,6 +1271,7 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
+                <module>arquillian</module>
                 <module>cluster-tests</module>
             </modules>
         </profile>
@@ -1270,6 +1280,7 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
+                <module>arquillian</module>
                 <module>tck-api</module>
                 <module>tck-core</module>
                 <module>tck-modules</module>
@@ -1280,6 +1291,7 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
+                <module>arquillian</module>
                 <module>tck-api</module>
             </modules>
         </profile>
@@ -1288,6 +1300,7 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
+                <module>arquillian</module>
                 <module>tck-core</module>
             </modules>
         </profile>
@@ -1296,6 +1309,7 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
+                <module>arquillian</module>
                 <module>tck-modules</module>
             </modules>
         </profile>
