--- a/tck-api/pom.xml
+++ b/tck-api/pom.xml
@@ -65,6 +65,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.capedwarf.testsuite</groupId>
+            <artifactId>arquillian</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
             <scope>test</scope>
