--- a/tck-modules/pom.xml
+++ b/tck-modules/pom.xml
@@ -104,7 +104,7 @@
 
         <dependency>
             <groupId>com.google.appengine.tck</groupId>
-            <artifactId>modules</artifactId>
+            <artifactId>appengine-tck-modules</artifactId>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
