--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -477,7 +477,59 @@
                         <version>${version.assembly.maven.plugin}</version>
                         <configuration>
                             <descriptors>
-                                <descriptor>src/main/assembly/descriptor.xml</descriptor>
+                                <descriptor>src/main/assembly/release.xml</descriptor>
+                            </descriptors>
+                            <finalName>CapeDwarf_WildFly_${version.capedwarf}</finalName>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>dist</id>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>${version.org.codehaus.exec}</version>
+                        <executions>
+                            <execution>
+                                <id>bytecode-transform</id>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <phase>verify</phase>
+                                <configuration>
+                                    <includeProjectDependencies>true</includeProjectDependencies>
+                                    <includePluginDependencies>false</includePluginDependencies>
+                                    <mainClass>org.jboss.capedwarf.bytecode.CapedwarfTransformerMojo</mainClass>
+                                    <arguments>
+                                        <argument>${jboss.dir}/modules/com/google/appengine/main/appengine-api-1.0-sdk-${version.com.google.appengine}.jar</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${version.assembly.maven.plugin}</version>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly/dist.xml</descriptor>
                             </descriptors>
                             <finalName>CapeDwarf_WildFly_${version.capedwarf}</finalName>
                         </configuration>
