--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -71,8 +71,20 @@
         <dependency>
             <groupId>org.jboss.maven.plugins</groupId>
             <artifactId>maven-transformer-plugin</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.maven</groupId>
+                    <artifactId>maven-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.maven</groupId>
+                    <artifactId>maven-plugin-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
         <!--CD modules here -->
+
         <dependency>
             <groupId>org.picketlink</groupId>
             <artifactId>picketlink-social</artifactId>
@@ -91,6 +103,11 @@
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-1.0-sdk</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-tools-sdk</artifactId>
         </dependency>
 
         <dependency>
@@ -247,6 +264,11 @@
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-cron</artifactId>
         </dependency>
 
         <dependency>
@@ -427,6 +449,11 @@
         <dependency>
             <groupId>org.wildfly</groupId>
             <artifactId>mail-ra-impl</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
         </dependency>
 
     </dependencies>
