--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
     <packaging>pom</packaging>
 
     <properties>
-        <version.capedwarf>2.0.0.CR1</version.capedwarf>
+        <version.capedwarf>2.0.0.CR2</version.capedwarf>
         <!-- Deps -->
-        <version.jboss.wildfly>8.0.0.Final</version.jboss.wildfly>
-        <version.org.jboss.xnio>3.2.0.Final</version.org.jboss.xnio>
+        <version.jboss.wildfly>8.1.0.CR1</version.jboss.wildfly>
+        <version.org.jboss.xnio>3.2.2.Final</version.org.jboss.xnio>
         <version.org.jboss.capedwarf.shared>1.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <version.org.jboss.as.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.as.capedwarf>
         <version.org.jboss.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.capedwarf>
@@ -27,17 +27,17 @@
         <!-- GAE ARQ -->
         <version.arquillian.gae>1.0.0.Beta7</version.arquillian.gae>
         <!-- External deps -->
-        <version.com.google.appengine>1.9.2</version.com.google.appengine>
+        <version.com.google.appengine>1.9.3</version.com.google.appengine>
         <version.com.google.guava>15.0</version.com.google.guava>
         <version.org.apache.ant>1.8.2</version.org.apache.ant>
         <version.org.apache.httpcomponents>4.2.1</version.org.apache.httpcomponents>
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.hibernate.search>4.5.0.Final</version.org.hibernate.search>
+        <version.org.hibernate.search>4.5.1.Final</version.org.hibernate.search>
         <version.org.hibernate.hql>1.0.0.Alpha6</version.org.hibernate.hql>
-        <version.org.jgroups>3.4.2.Final</version.org.jgroups>
-        <version.org.infinispan>6.0.1.Final</version.org.infinispan>
+        <version.org.jgroups>3.4.3.Final</version.org.jgroups>
+        <version.org.infinispan>6.0.2.Final</version.org.infinispan>
         <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta5</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
@@ -84,7 +84,7 @@
         <!-- Testing Objectify -->
         <version.objectify>4.0rc2</version.objectify>
         <!-- Testing REST -->
-        <version.org.jboss.resteasy>3.0.6.Final</version.org.jboss.resteasy>
+        <version.org.jboss.resteasy>3.0.8.Final</version.org.jboss.resteasy>
         <!-- Assembly -->
         <version.assembly.maven.plugin>2.4</version.assembly.maven.plugin>
         <!-- Needs to be set explicitely to match with org.jacoco:org.jacoco.ant - see testsuite. -->
