Workaround JSF leak.

--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -456,6 +456,10 @@
             <artifactId>quartz</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-impl</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
