--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -172,6 +172,10 @@
             <maven-resource group="org.quartz-scheduler" artifact="quartz"/>
         </module-def>
 
+        <module-def name="com.sun.jsf-impl">
+            <maven-resource group="com.sun.faces" artifact="jsf-impl"/>
+        </module-def>
+
         <!-- module-def name="org.apache.avro">
             <maven-resource group="org.apache.avro" artifact="avro"/>
         </module-def>
