--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,9 @@
         <version.org.datanucleus.cache>3.1.1</version.org.datanucleus.cache>
         <version.org.datanucleus.jdo>3.0.1</version.org.datanucleus.jdo>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
+        <!-- TEMP -->
+        <version.jsf.impl>2.2.6-jbossorg-2</version.jsf.impl>
+
         <!-- Testing - MapReduce -->
         <version.com.google.gae.mapreduce>0.5</version.com.google.gae.mapreduce>
         <version.com.google.gae.pipeline>0.2.7</version.com.google.gae.pipeline>
@@ -1242,6 +1245,13 @@
                 <scope>test</scope>
             </dependency>
 
+            <!-- Temp jsf fix -->
+
+            <dependency>
+                <groupId>com.sun.faces</groupId>
+                <artifactId>jsf-impl</artifactId>
+                <version>${version.jsf.impl}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
