--- a/pom.xml
+++ b/pom.xml
@@ -71,16 +71,20 @@
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
 
         <!-- Testing - MapReduce -->
-        <version.com.google.gae.mapreduce>0.5</version.com.google.gae.mapreduce>
-        <version.com.google.gae.pipeline>0.2.7</version.com.google.gae.pipeline>
+        <version.com.google.gae.mapreduce>0.7.1</version.com.google.gae.mapreduce>
+        <version.com.google.gae.pipeline>0.2.8</version.com.google.gae.pipeline>
         <version.fastutil>6.5.12</version.fastutil>
         <version.charts4j>1.3</version.charts4j>
         <version.commons-logging>1.1.1</version.commons-logging>
         <version.org.json>20090211</version.org.json>
         <!-- Testing GCS Client -->
-        <version.com.google.appengine.tools.cloudstorage>0.3.7</version.com.google.appengine.tools.cloudstorage>
+        <version.com.google.appengine.tools.cloudstorage>0.3.13</version.com.google.appengine.tools.cloudstorage>
+        <version.com.google.api-client>1.17.0-rc</version.com.google.api-client>
+        <version.com.google.http-client>1.17.0-rc</version.com.google.http-client>
+        <version.com.google.api-services>v1-rev1-1.18.0-rc</version.com.google.api-services>
+        <version.joda>2.3</version.joda>
+        <version.com.fasterxml.jackson-core>2.1.3</version.com.fasterxml.jackson-core>
         <!-- Testing Iddx -->
-        <version.com.google.api-client>1.11.0-beta</version.com.google.api-client>
         <version.com.google.api-services-bigquery>v2-rev142-1.18.0-rc</version.com.google.api-services-bigquery>
         <!-- Testing Objectify -->
         <version.objectify>4.0rc2</version.objectify>
@@ -1150,6 +1154,30 @@
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>${version.org.json}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${version.joda}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.http-client</groupId>
+                <artifactId>google-http-client-jackson2</artifactId>
+                <version>${version.com.google.http-client}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.apis</groupId>
+                <artifactId>google-api-services-storage</artifactId>
+                <version>${version.com.google.api-services}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${version.com.fasterxml.jackson-core}</version>
             </dependency>
 
             <!-- Testing Iddx -->
