--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <!-- GAE ARQ -->
         <version.arquillian.gae>1.0.0.Beta9</version.arquillian.gae>
         <!-- External deps -->
-        <version.com.google.appengine>1.9.15</version.com.google.appengine>
+        <version.com.google.appengine>1.9.17a</version.com.google.appengine>
         <version.com.google.guava>15.0</version.com.google.guava>
         <version.org.apache.ant>1.8.2</version.org.apache.ant>
         <version.org.apache.httpcomponents>4.3.1</version.org.apache.httpcomponents>
