Move Shared to sub Integration module.

--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -89,7 +89,7 @@
         </module-def>
 
         <module-def name="org.jboss.capedwarf.shared">
-            <maven-resource group="org.jboss.capedwarf.shared" artifact="capedwarf-shared"/>
+            <maven-resource group="org.jboss.capedwarf.shared" artifact="capedwarf-integration"/>
         </module-def>
 
         <module-def name="org.jboss.capedwarf">
