--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -124,6 +124,12 @@
             <maven-resource group="org.jboss.capedwarf.blue" artifact="capedwarf-xmpp"/>
         </module-def>
 
+        <module-def name="org.jboss.capedwarf.common">
+            <maven-resource group="org.jboss.capedwarf.shared" artifact="capedwarf-common"/>
+            <maven-resource group="com.google.appengine" artifact="appengine-managed-runtime"/>
+            <maven-resource group="com.google.appengine" artifact="appengine-jetty-managed-runtime"/>
+        </module-def>
+
         <module-def name="org.jboss.maven.plugins.transformer">
             <maven-resource group="org.jboss.maven.plugins" artifact="maven-transformer-plugin"/>
         </module-def>
