--- a/integrate-cd/pom.xml
+++ b/integrate-cd/pom.xml
@@ -92,6 +92,21 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.shared</groupId>
+            <artifactId>capedwarf-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-managed-runtime</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-jetty-managed-runtime</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.shared</groupId>
             <artifactId>capedwarf-integration</artifactId>
         </dependency>
 
