--- a/build-as/pom.xml
+++ b/build-as/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jboss.capedwarf.testsuite</groupId>
         <artifactId>capedwarf-testsuite</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -42,7 +42,7 @@
             <groupId>org.wildfly</groupId>
             <artifactId>wildfly-dist</artifactId>
             <type>zip</type>
-            <version>${version.jboss.wildfly}</version>
+            <version>${version.org.wildfly}</version>
         </dependency>
 
     </dependencies>
