--- a/integrate-cd/build.xml
+++ b/integrate-cd/build.xml
@@ -45,45 +45,6 @@
 
         <module-def name="org.jboss.as.product" slot="capedwarf"/>
 
-        <module-def name="com.google.appengine">
-            <maven-resource group="com.google.appengine" artifact="appengine-api-1.0-sdk" />
-        </module-def>
-
-        <module-def name="com.google.appengine.tools">
-            <maven-resource group="com.google.appengine" artifact="appengine-tools-sdk" />
-        </module-def>
-
-        <module-def name="com.google.appengine.endpoints">
-            <maven-resource group="com.google.appengine" artifact="appengine-local-endpoints" />
-        </module-def>
-
-        <module-def name="javax.jdo.api">
-            <maven-resource group="javax.jdo" artifact="jdo-api"/>
-        </module-def>
-
-        <module-def name="org.bouncycastle.bcmail">
-            <maven-resource group="org.bouncycastle" artifact="bcmail-jdk15on"/>
-        </module-def>
-
-    	<module-def name="org.bouncycastle.bcpkix">
-            <maven-resource group="org.bouncycastle" artifact="bcpkix-jdk15on"/>
-        </module-def>
-
-    	<module-def name="org.bouncycastle.bcprov">
-            <maven-resource group="org.bouncycastle" artifact="bcprov-jdk15on"/>
-        </module-def>
-
-        <module-def name="org.datanucleus">
-            <maven-resource group="org.datanucleus" artifact="datanucleus-core" />
-            <maven-resource group="org.datanucleus" artifact="datanucleus-api-jdo" />
-            <maven-resource group="org.datanucleus" artifact="datanucleus-api-jpa" />
-            <maven-resource group="org.datanucleus" artifact="datanucleus-cache" />
-        </module-def>
-
-        <module-def name="org.datanucleus.appengine">
-            <maven-resource group="com.google.appengine.orm" artifact="datanucleus-appengine" />
-        </module-def>
-
         <module-def name="org.jboss.as.capedwarf">
             <maven-resource group="org.jboss.capedwarf" artifact="wildfly-capedwarf"/>
         </module-def>
@@ -134,6 +95,33 @@
             <maven-resource group="org.jboss.maven.plugins" artifact="maven-transformer-plugin"/>
         </module-def>
 
+        <module-def name="com.google.appengine">
+            <maven-resource group="com.google.appengine" artifact="appengine-api-1.0-sdk" />
+        </module-def>
+
+        <module-def name="com.google.appengine.tools">
+            <maven-resource group="com.google.appengine" artifact="appengine-tools-sdk" />
+        </module-def>
+
+        <module-def name="com.google.appengine.endpoints">
+            <maven-resource group="com.google.appengine" artifact="appengine-local-endpoints" />
+        </module-def>
+
+        <module-def name="javax.jdo.api">
+            <maven-resource group="javax.jdo" artifact="jdo-api"/>
+        </module-def>
+
+        <module-def name="org.datanucleus">
+            <maven-resource group="org.datanucleus" artifact="datanucleus-core" />
+            <maven-resource group="org.datanucleus" artifact="datanucleus-api-jdo" />
+            <maven-resource group="org.datanucleus" artifact="datanucleus-api-jpa" />
+            <maven-resource group="org.datanucleus" artifact="datanucleus-cache" />
+        </module-def>
+
+        <module-def name="org.datanucleus.appengine">
+            <maven-resource group="com.google.appengine.orm" artifact="datanucleus-appengine" />
+        </module-def>
+
         <module-def name="org.jivesoftware.smack">
             <maven-resource group="jivesoftware" artifact="smack"/>
         </module-def>
@@ -146,10 +134,6 @@
 
         <module-def name="com.google.code.guice">
             <maven-resource group="com.google.code.guice" artifact="guice"/>
-        </module-def>
-
-        <module-def name="com.google.guava">
-            <maven-resource group="com.google.guava" artifact="guava"/>
         </module-def>
 
         <module-def name="org.picketlink.social">
@@ -178,34 +162,7 @@
             <maven-resource group="org.quartz-scheduler" artifact="quartz"/>
         </module-def>
 
-        <!-- module-def name="org.apache.avro">
-            <maven-resource group="org.apache.avro" artifact="avro"/>
-        </module-def>
-
-        <module-def name="org.apache.lucene">
-            <maven-resource group="org.apache.lucene" artifact="lucene-core"/>
-            <maven-resource group="org.apache.lucene" artifact="lucene-analyzers"/>
-            <maven-resource group="org.apache.lucene" artifact="lucene-memory"/>
-        </module-def>
-
-
-        <module-def name="org.jboss.as.clustering.infinispan">
-            <maven-resource group="org.wildfly" artifact="wildfly-clustering-infinispan"/>
-        </module-def>
-
-        <module-def name="org.hibernate.search.engine">
-            <maven-resource group="org.hibernate" artifact="hibernate-search-engine"/>
-            <maven-resource group="org.hibernate" artifact="hibernate-search-infinispan"/>
-            <maven-resource group="org.infinispan" artifact="infinispan-lucene-directory"/>
-        </module-def>
-
-        <module-def name="org.hibernate.hql">
-            <maven-resource group="org.hibernate.hql" artifact="hibernate-hql-parser"/>
-        </module-def>
-
-        <module-def name="org.jgroups">
-            <maven-resource group="org.jgroups" artifact="jgroups"/>
-        </module-def>
+        <!-- Fix Infinispan Query usage -->
 
         <module-def name="org.infinispan">
             <maven-resource group="org.infinispan" artifact="infinispan-core"/>
@@ -217,6 +174,65 @@
 
         <module-def name="org.infinispan.query">
             <maven-resource group="org.infinispan" artifact="infinispan-query"/>
+            <maven-resource group="org.infinispan" artifact="infinispan-objectfilter"/>
+        </module-def>
+
+        <module-def name="org.infinispan.lucene.directory">
+            <maven-resource group="org.infinispan" artifact="infinispan-lucene-directory"/>
+        </module-def>
+
+        <module-def name="org.hibernate.search.engine">
+            <maven-resource group="org.hibernate" artifact="hibernate-search-engine"/>
+        </module-def>
+
+        <module-def name="org.hibernate.search.infinispan-storage">
+            <maven-resource group="org.hibernate" artifact="hibernate-search-infinispan"/>
+        </module-def>
+
+        <module-def name="org.hibernate.search.serialization-avro">
+            <maven-resource group="org.hibernate" artifact="hibernate-search-serialization-avro"/>
+        </module-def>
+
+        <module-def name="org.hibernate.hql">
+            <maven-resource group="org.hibernate.hql" artifact="hibernate-hql-parser"/>
+            <maven-resource group="org.hibernate.hql" artifact="hibernate-hql-lucene"/>
+        </module-def>
+
+        <module-def name="org.apache.lucene">
+            <maven-resource group="org.apache.lucene" artifact="lucene-analyzers-common"/>
+            <maven-resource group="org.apache.lucene" artifact="lucene-core"/>
+            <maven-resource group="org.apache.lucene" artifact="lucene-facet"/>
+            <maven-resource group="org.apache.lucene" artifact="lucene-memory"/>
+            <maven-resource group="org.apache.lucene" artifact="lucene-queries"/>
+            <maven-resource group="org.apache.lucene" artifact="lucene-queryparser"/>
+        </module-def>
+
+        <!-- module-def name="com.google.guava">
+            <maven-resource group="com.google.guava" artifact="guava"/>
+        </module-def -->
+
+        <!-- module-def name="org.bouncycastle.bcmail">
+            <maven-resource group="org.bouncycastle" artifact="bcmail-jdk15on"/>
+        </module-def>
+
+        <module-def name="org.bouncycastle.bcpkix">
+            <maven-resource group="org.bouncycastle" artifact="bcpkix-jdk15on"/>
+        </module-def>
+
+        <module-def name="org.bouncycastle.bcprov">
+            <maven-resource group="org.bouncycastle" artifact="bcprov-jdk15on"/>
+        </module-def -->
+
+        <!-- module-def name="org.apache.avro">
+            <maven-resource group="org.apache.avro" artifact="avro"/>
+        </module-def>
+
+        <module-def name="org.jboss.as.clustering.infinispan">
+            <maven-resource group="org.wildfly" artifact="wildfly-clustering-infinispan"/>
+        </module-def>
+
+        <module-def name="org.jgroups">
+            <maven-resource group="org.jgroups" artifact="jgroups"/>
         </module-def -->
 
     </target>
