--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jboss.capedwarf.testsuite</groupId>
         <artifactId>capedwarf-testsuite</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -50,7 +50,7 @@
                         <include>org/jboss/test/**/*Test.java</include>
                     </includes>
                     <systemProperties>
-                        <jboss.dir>${basedir}/../build-as/target/wildfly-${version.jboss.wildfly}</jboss.dir>
+                        <jboss.dir>${basedir}/../build-as/target/wildfly-${version.org.wildfly}</jboss.dir>
                     </systemProperties>
                 </configuration>
             </plugin>
@@ -83,7 +83,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.wildfly</groupId>
+            <groupId>org.wildfly.arquillian</groupId>
             <artifactId>wildfly-arquillian-container-managed</artifactId>
             <scope>test</scope>
         </dependency>
