--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <properties>
         <version.capedwarf>3.0.0.Beta1</version.capedwarf>
         <!-- Deps -->
-        <version.org.wildfly>9.0.0.Beta2</version.org.wildfly>
+        <version.org.wildfly>9.0.0.CR1-SNAPSHOT</version.org.wildfly>
         <version.org.wildfly.arquillian>1.0.0.Alpha5</version.org.wildfly.arquillian>
         <version.org.jboss.xnio>3.3.0.Final</version.org.jboss.xnio>
         <version.org.jboss.capedwarf.shared>3.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
@@ -36,10 +36,10 @@
         <version.org.apache.lucene>4.10.4</version.org.apache.lucene>
         <version.org.bouncycastle>1.50</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.hibernate.search>5.1.1.Final</version.org.hibernate.search>
+        <version.org.hibernate.search>5.1.2-SNAPSHOT</version.org.hibernate.search>
         <version.org.hibernate.hql>1.1.0.Final</version.org.hibernate.hql>
         <version.org.jgroups>3.6.2.Final</version.org.jgroups>
-        <version.org.infinispan>7.2.0.Beta1</version.org.infinispan>
+        <version.org.infinispan>7.1.1.Final</version.org.infinispan>
         <version.org.jboss.jandex>1.2.2.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta5</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
