--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <version.junit>4.11</version.junit>
         <version.arquillian>1.1.5.Final</version.arquillian>
         <version.org.jboss.arquillian.graphene2>2.0.3.Final</version.org.jboss.arquillian.graphene2>
+        <version.org.jboss.arquillian.governor>1.0.1.Final</version.org.jboss.arquillian.governor>
         <version.metainf>1.6</version.metainf>
         <!-- DataNucleus -->
         <version.org.datanucleus>3.1.3</version.org.datanucleus>
@@ -1289,6 +1290,13 @@
                 <type>pom</type>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.arquillian.extension</groupId>
+                <artifactId>arquillian-governor-ignore</artifactId>
+                <version>${version.org.jboss.arquillian.governor}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -1301,7 +1309,6 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
-                <module>arquillian</module>
                 <module>embedded</module>
                 <module>tests</module>
                 <module>tools</module>
@@ -1316,7 +1323,6 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
-                <module>arquillian</module>
                 <module>embedded</module>
                 <module>tests</module>
                 <module>tools</module>
@@ -1328,7 +1334,6 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
-                <module>arquillian</module>
                 <module>tools</module>
             </modules>
         </profile>
@@ -1337,7 +1342,6 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
-                <module>arquillian</module>
                 <module>cluster-tests</module>
             </modules>
         </profile>
@@ -1346,7 +1350,6 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
-                <module>arquillian</module>
                 <module>tck-api</module>
                 <module>tck-core</module>
                 <module>tck-modules</module>
@@ -1357,7 +1360,6 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
-                <module>arquillian</module>
                 <module>tck-api</module>
             </modules>
         </profile>
@@ -1366,7 +1368,6 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
-                <module>arquillian</module>
                 <module>tck-core</module>
             </modules>
         </profile>
@@ -1375,7 +1376,6 @@
             <modules>
                 <module>build-as</module>
                 <module>integrate-cd</module>
-                <module>arquillian</module>
                 <module>tck-modules</module>
             </modules>
         </profile>
